fix report gaps

--- a/LRP/RobberyIncident/index.css
+++ b/LRP/RobberyIncident/index.css
@@ -90,7 +90,7 @@ textarea {
     padding: 3px;
     resize: none;
     width: 450px;
-    height: 50px;
+    height: 30px;
 }
 
 .narrow {
